--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-remote_theme: pages-themes/merlot@v0.2.0
+remote_theme: pages-themes/modernist@v0.2.0
 plugins:
 - jekyll-remote-theme
 
-title: [Betrand's Paradox]
+title: [Betrands Paradox]
 description:
 [Consider an equilateral triangle inscribed in a circle. 
 Suppose a chord of the circle is chosen at random. 
