--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-remote_theme: pages-themes/modernist@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
 
 title: [Betrand Paradox]
 description: [Consider an equilateral triangle inscribe in a circle.
 Suppose a chord of the circle is chosen at random.
-What is the probability that the chord is longer than a side of the triangle?]
+What is the probability that the chord is longer than a side of the triangle?
